--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -162,10 +162,16 @@
     .title-line {
         font-size: 1.8rem;
         padding: 0 0 1% 0;
+        @include truncate-text();
+    }
+    .comment {
+        font-size: 1.8rem;
+        padding: 0 0 1% 0;
     }
     .detail-line {
         font-size: 1.4rem;
         padding: 0 0 1% 0;
+        @include truncate-text();
     }
 }
 
