--- a/app/src/components/beer-reviews/beer-reviews.scss
+++ b/app/src/components/beer-reviews/beer-reviews.scss
@@ -26,7 +26,7 @@
     }
     button {
         @include button();
-        margin: 0 2%;
+        margin: 0 2% 5%;
         background-color: $content-text;
     }
 
