--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -237,4 +237,9 @@
         background-color: $content-text;
     }
 
+    button[disabled] {
+        background-color: $faded-orange;
+        color: $grey;
+    }
+
 }
