--- a/app/src/scss/partials/_colors.scss
+++ b/app/src/scss/partials/_colors.scss
@@ -8,6 +8,7 @@ $blue: #005778;
 $light-orange: #f8c9a3;
 $orange: #faa75e;
 $dark-orange: #f58220;
+$faded-orange: #e7a670;
 $green: #97dfb7;
 
 //not used
@@ -25,6 +26,7 @@ $auth-accent: $orange;
 $content-text: $dark-orange;
 $form-background: $light-orange;
 $button: $green;
+$disabled-button: $faded-orange; 
 $footer: $blue;
 
 
