shorten header text on add beer page so that it will not truncate on mobile

--- a/app/src/components/add-beers/add-beers.html
+++ b/app/src/components/add-beers/add-beers.html
@@ -1,5 +1,5 @@
 <section ng-class="$ctrl.styles.add_beers">
-    <h3>Use the Form Below to Add a Beer</h3>
+    <h3>Add a Beer</h3>
     <form class="add-beer" name="addBeer">
         <i class="fa fa-times fa-2x" aria-hidden="true" ng-click="$ctrl.backToAll()"></i>
         <h4>
