stop zoom in on auth forms

--- a/app/src/components/account/signup/signup.scss
+++ b/app/src/components/account/signup/signup.scss
@@ -1,6 +1,11 @@
 @import 'colors';
 
 :local(.signup) {
+    input[type='text'],
+    input[type='number'],
+    textarea {
+    font-size: 1.6rem;
+    }
 }
 
 
