--- a/app/src/components/account/signin/signin.scss
+++ b/app/src/components/account/signin/signin.scss
@@ -1,6 +1,11 @@
 @import 'colors';
 
 :local(.signin) {
+    input[type='text'],
+    input[type='number'],
+    textarea {
+    font-size: 1.6rem;
+    }
 }
 
 
