change beer button user reviews page to route back to beers

--- a/app/src/components/profile/profile.html
+++ b/app/src/components/profile/profile.html
@@ -6,8 +6,8 @@
     </header>
     <div class="sub-heading">
         <h2>Beers!</h2>
-        <div class="bottle-btn" ng-click="$ctrl.goToAddBeer()">
-                <button><span>Add a Beer</span></button>
+        <div class="bottle-btn" ng-click="$ctrl.backToBeers()">
+                <button><span>Back to Beers</span></button>
                 <div></div>
         </div>
     </div>
