change path for home page background image; change header name of app to HopHub

--- a/app/src/components/about-app/about-app.scss
+++ b/app/src/components/about-app/about-app.scss
@@ -2,7 +2,7 @@
 
 :local(.app) {
     .hero {
-        background: url('/beer-reviewed-journal/img/beer-pint.png') no-repeat center -15px;
+        background: url('/img/beer-pint.png') no-repeat center -15px;
         background-size: cover;
         min-height: 600px;       
         .hero-text {
