--- a/app/src/components/account/signin/signin.html
+++ b/app/src/components/account/signin/signin.html
@@ -1,5 +1,5 @@
 <section ng-class="$ctrl.styles.signin">
-	<h2>Sign in to BrrrApp</h2>
+	<h2>Sign in to HopHub</h2>
 	<form name="auth" ng-submit="$ctrl.authenticate()">
 		<div>
             <label for="username">username: </label>
