--- a/app/src/components/account/signup/signup.html
+++ b/app/src/components/account/signup/signup.html
@@ -1,5 +1,5 @@
 <section ng-class="$ctrl.styles.signup">
-	<h2>Sign up for BrrrApp</h2>
+	<h2>Sign up for HopHub</h2>
 	<form name="auth" ng-submit="$ctrl.authenticate()">
 		<div>
             <label for="username">username: </label>
