--- a/app/src/scss/partials/_buttons.scss
+++ b/app/src/scss/partials/_buttons.scss
@@ -8,6 +8,7 @@
     border: none;
     outline: none;
     border-radius: 15px;
+    cursor: pointer;
     span {
         font-size: 1.4rem;
         font-weight: bold;
@@ -29,6 +30,7 @@
         outline: none;
         background-color: $button;
         border-radius: 5px 15px 15px 5px;
+        cursor: pointer;
         span {
             font-size: 1.4rem;
             font-weight: bold;
@@ -42,6 +44,7 @@
         margin: 0 0 -4px -5px;
         border-radius: 0 5px 5px 0;
         background-color: $button;
+        cursor: pointer;
     }
 
 }
