--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -91,6 +91,7 @@
         .nav-link {
             flex: 1;
             text-align: center;
+            cursor: pointer;
             li {
                 padding: 5px 0 0;
                 font-size: 1.0rem;
