--- a/app/src/components/account/user-auth/user-auth.scss
+++ b/app/src/components/account/user-auth/user-auth.scss
@@ -70,6 +70,7 @@
         background-color: $auth-accent;
         padding: 5px 10px;
         margin-top: 10px;
+        cursor: pointer;
     }
 
     .error {
