--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -48,6 +48,9 @@
             padding-left: 4%;
             margin: 0;
             font-size: 2.4rem;
+            span {
+                cursor: pointer;
+            }
         }           
     }
 }
@@ -91,14 +94,22 @@
         .nav-link {
             flex: 1;
             text-align: center;
-            cursor: pointer;
+            .hover {
+                cursor: pointer;
+            }
             li {
                 padding: 5px 0 0;
                 font-size: 1.0rem;
+                span {
+                    cursor: pointer;
+                }
             }            
             i {
                 font-size: 2.0rem;
                 display: block;
+            }
+            i::before {
+                cursor: pointer;
             }
         }
     }
