--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -8,6 +8,7 @@
     margin-bottom: 2%;
     .beer-listing{
         @include listing();
+        cursor: pointer;
     }
     h3 {
         @include content-heading();
