--- a/app/src/components/account/user-auth/user-auth.html
+++ b/app/src/components/account/user-auth/user-auth.html
@@ -2,7 +2,7 @@
     <div class="sign-in-or-up">
         <label>
             <input type="radio" ng-model="$ctrl.action" value="signin">
-            Sign In
+            Log In
         </label>
         <label>
             <input type="radio" ng-model="$ctrl.action" value="signup">
